# Fixed_Income_Butterfly_Trades

./: .gitignore  11.1._20PCA_20Butterfly_20Trade.ipynb  Question_1.ipynb  Question_2.ipynb  Question_3.ipynb  Question_4.ipynb  Question_5.ipynb  README.md  main.py  pyproject.toml
data/: gsw_yields.xlsx
